--- a/eas.json
+++ b/eas.json
@@ -24,7 +24,8 @@
     "submit": {
         "production": {
             "android": {
-                "track": "internal"
+                "track": "internal",
+                "releaseStatus": "draft"
             }
         }
     }
