--- a/.eas/workflows/production-build.yml
+++ b/.eas/workflows/production-build.yml
@@ -2,7 +2,8 @@ name: Production Build & Deploy
 
 on:
   push:
-    branches: ['main']
+    tags:
+      - 'v*'  # Trigger only on version tags like v1.0.0, v1.1.0
 
 jobs:
   build_android:
