--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ android
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+.env
+.env.*.local
+
+.vscode
