feat: implement native google sign-in, chatbot ui, and native font embedding

--- a/app.json
+++ b/app.json
@@ -7,7 +7,38 @@
     "experiments": {
       "tsconfigPaths": true
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      "@react-native-google-signin/google-signin",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./assets/fonts/VisbyCF-Regular.otf",
+            "./assets/fonts/VisbyCF-Medium.otf",
+            "./assets/fonts/VisbyCF-DemiBold.otf"
+          ],
+          "android": {
+            "fonts": [
+              {
+                "fontFamily": "VisbyCF-Regular",
+                "fontDefinitions": [{ "path": "./assets/fonts/VisbyCF-Regular.otf", "weight": 400 }]
+              },
+              {
+                "fontFamily": "VisbyCF-Medium",
+                "fontDefinitions": [{ "path": "./assets/fonts/VisbyCF-Medium.otf", "weight": 500 }]
+              },
+              {
+                "fontFamily": "VisbyCF-DemiBold",
+                "fontDefinitions": [
+                  { "path": "./assets/fonts/VisbyCF-DemiBold.otf", "weight": 600 }
+                ]
+              }
+            ]
+          }
+        }
+      ]
+    ],
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
