--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@supabase/supabase-js": "^2.91.0",
     "expo": "^54.0.0",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
