--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.91.0",
     "expo": "^54.0.0",
     "expo-audio": "~1.1.1",
+    "expo-av": "~16.0.8",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-font": "~14.0.11",
@@ -26,6 +27,7 @@
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.8",
+    "expo-speech-recognition": "^3.0.1",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.9",
