--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@supabase/supabase-js": "^2.91.0",
     "expo": "^54.0.0",
+    "expo-asset": "~12.0.12",
     "expo-audio": "~1.1.1",
     "expo-av": "~16.0.8",
     "expo-constants": "~18.0.13",
@@ -62,11 +63,11 @@
   "main": "expo-router/entry",
   "private": true,
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "**/*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{json,md}": [
+    "**/*.{json,md}": [
       "prettier --write"
     ]
   }
