--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@supabase/supabase-js": "^2.91.0",
+    "base64-arraybuffer": "^1.0.2",
     "expo": "^54.0.0",
     "expo-asset": "~12.0.12",
     "expo-audio": "~1.1.1",
@@ -29,7 +30,7 @@
     "expo-router": "~6.0.22",
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.13",
-    "expo-status-bar": "~3.0.8",
+    "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "nativewind": "latest",
