--- a/app.json
+++ b/app.json
@@ -73,7 +73,7 @@
     "android": {
       "permissions": ["android.permission.RECORD_AUDIO"],
       "package": "com.hackwit.pirinku",
-      "softwareKeyboardLayoutMode": "pan"
+      "softwareKeyboardLayoutMode": "resize"
     },
     "extra": {
       "router": {},
