--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "iconsax-react-native": "^0.0.8",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-native": "0.81.5",
@@ -44,6 +45,7 @@
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.10"
