fix: lint error in EmptyChat (unescaped quote)

--- a/.eas/workflows/pull-request-check.yml
+++ b/.eas/workflows/pull-request-check.yml
@@ -3,7 +3,7 @@ name: Pull Request Checks
 on:
   pull_request:
     types: [opened, synchronize]
-    branches: ["main", "develop"]
+    branches: ['main', 'develop']
 
 jobs:
   lint_and_typecheck:
