--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-google-signin/google-signin": "^16.1.1",
     "@supabase/supabase-js": "^2.91.0",
+    "axios": "^1.13.4",
     "base64-arraybuffer": "^1.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.33",
     "expo-asset": "~12.0.12",
     "expo-audio": "~1.1.1",
