--- a/package.json
+++ b/package.json
@@ -66,14 +66,5 @@
     "typescript": "~5.9.2"
   },
   "main": "expo-router/entry",
-  "private": true,
-  "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "**/*.{json,md}": [
-      "prettier --write"
-    ]
-  }
+  "private": true
 }
