--- a/.eas/workflows/production-build.yml
+++ b/.eas/workflows/production-build.yml
@@ -3,7 +3,7 @@ name: Production Build & Deploy
 on:
   push:
     tags:
-      - 'v*' # Trigger only on version tags like v1.0.0, v1.1.0
+      - "v*" # Trigger only on version tags like v1.0.0, v1.1.0
 
 jobs:
   build_android:
@@ -17,5 +17,6 @@ jobs:
     params:
       platform: android
       profile: production
+      build_id: ${{ jobs.build_android.outputs.build_id }}
     needs:
       - build_android
