fix: Use correct EAS Workflows context for build_id (needs instead of jobs)

--- a/.eas/workflows/production-build.yml
+++ b/.eas/workflows/production-build.yml
@@ -17,6 +17,6 @@ jobs:
     params:
       platform: android
       profile: production
-      build_id: ${{ jobs.build_android.outputs.build_id }}
+      build_id: ${{ needs.build_android.outputs.build_id }}
     needs:
       - build_android
